# cpp-py-smart-pointers-research

./: .gitmodules  CMakeLists.txt  README.md
libs/: .clang-format  CMakeLists.txt  common.h
libs/x01/: CMakeLists.txt  README.md  foo.cpp  foo.h  test.py  wrap.cpp
libs/x02/: CMakeLists.txt  README.md  test.py  tree.h  wrap.cpp
libs/x03/: CMakeLists.txt  README.md  test.py  tree.h  wrap.cpp
libs/x04/: CMakeLists.txt  README.md  test.py  widget.h  wrap.cpp
libs/x05/: CMakeLists.txt  README.md  test.py  widget.h  wrap.cpp
libs/x06/: CMakeLists.txt  README.md  action.h  test.py  wrap.cpp
